# cubrid-odbc

./: .gitignore  CMakeLists.txt  build.bat  build_14.bat  build_2017.bat  build_unicode_14.bat  build_unicode_2017.bat  cubrid_odbc.def  cubrid_odbc.rc  cubrid_odbc.sln  cubrid_odbc.vcproj  cubrid_odbc_14.sln  cubrid_odbc_14.vcxproj  cubrid_odbc_unicode.def  cubrid_odbc_unicode.vcproj  cubrid_odbc_unicode_14.vcxproj  odbc.c  odbc_catalog.c  odbc_connection.c  odbc_connection.h  odbc_descriptor.c  odbc_descriptor.h  odbc_diag_record.c  odbc_env.c  odbc_env.h  odbc_interface.c  odbc_linux.c  odbc_number.c  odbc_portable.h  odbc_resource.h  odbc_result.c  odbc_result.h  odbc_statement.c  odbc_statement.h  odbc_type.c  odbc_type.h  odbc_util.c  odbc_util.h  odbc_version.i  test.bat  (+1 more)
UnitTest/: LocalTestRun.testrunconfig  TestRunConfig.testrunconfig  UnitTest.sln  UnitTest.vsmdi  UnitTest1.vsmdi  UnitTest_14.sln
UnitTest-CPP/: UnitTest-CPP.sln
UnitTest-CPP/UnitTest-CPP/: UnitTest-CPP.vcxproj  UnitTest.cpp  stdafx.cpp
UnitTest/UnitTest/: TestBulkOperation.cs  TestCommand.cs  TestCommonMethod.cs  TestDataTypes.cs  TestInterfaceDefine.cs  TestInterfaceGetData.cs  TestInterfaceLGetDescField.cs  TestInterfaceOdbcInfo.cs  TestIssueCase.cs  TestTransaction.cs  UnitIssueCase.cs  UnitTest.csproj  UnitTestCase.cs  UnitTestOdbc.cs
cci/include/: broker_cas_error.h  cas_cci.h  cas_error.h  compat_dbtran_def.h
cci/lib32/: cas_cci.lib  cas_cci_d.lib  (+4 more)
installer/: README.txt  installer-unicode.nsi  installer.nsi  license.txt
script/: get_cci_driver.bat  get_cci_driver_2017.bat
(+5 files in other folders)
